Spacing Fixes

--- a/thinkingTalents/src/assets/scss/app.scss
+++ b/thinkingTalents/src/assets/scss/app.scss
@@ -66,7 +66,7 @@
 }
 
 h5.quad-desc {
-    line-height: 110%;
+    line-height: 1;
     padding-bottom: 2px;
 }
 
@@ -88,7 +88,7 @@ h1 {
 }
 
 #main-title {
-  font-size: 32pt;
+  font-size: 30pt;
   font-weight: bold;
   line-height: 110%;
   margin-bottom: 0px;
@@ -143,7 +143,7 @@ h1 {
 }
 
 .margin-top-1 {
-    margin-top: 2%;
+    margin-top: 2.6%;
 }
 
 .padding-top-half {
@@ -237,8 +237,7 @@ padding-bottom: 50px;
 
 .central-border-sides {
  border-top: 1px solid black;
- margin-top: 40px;
- padding-top: 10px;
+ margin-top: 50px;
 }
 
 #special-spacing {
@@ -251,7 +250,7 @@ padding-bottom: 50px;
 }
 
 .j-spacing {
-    margin-top: 45px;
+    margin-top: 60px;
     margin-bottom: 35px;
 }
 
@@ -304,7 +303,7 @@ padding-bottom: 50px;
 
 h4 {
   font-size: 24px;
-  line-height: 1;
+  line-height: 0.95;
 }
 
 .stuffed {
